--- a/News_homepage/stylesheets/global.css
+++ b/News_homepage/stylesheets/global.css
@@ -1,6 +1,6 @@
 :root {
     --clr-primary: hsl(35, 77%, 62%);
-    --clr-secondary: hsl(5, 85%, 63%);
+    --clr-primary-btn: hsl(5, 85%, 63%);
 
 
     --clr-neutral-white: hsl(36, 100%, 99%);
@@ -11,10 +11,16 @@
     --ff-primary: "Inter", sans-serif;
     --fw-regular: 400;
     --fw-bold: 700;
+    --fw-very-bold: 900;
 }
 
 body {
     padding: 24px 14px;
+    font-family:  var(--ff-primary)
+}
+
+p {
+    color: var(--clr-grayish-dark-blue);
 }
 
 .attribution {
