--- a/News_homepage/stylesheets/main-styles.css
+++ b/News_homepage/stylesheets/main-styles.css
@@ -2,6 +2,7 @@
 @import url("global.css");
 
 @import url("./components/main-nav.css");
+@import url("./components/main-content.css");
 @import url("./components/recent-articles.css");
 @import url("./components/interest-links.css");
 
