mobile screen done

--- a/News_homepage/stylesheets/reset.css
+++ b/News_homepage/stylesheets/reset.css
@@ -43,9 +43,11 @@ ul {
 }
 
 img {
-  display: block;
-  height: auto;
-  width: 100%;
+display: block;
+height: auto;
+width: 100%;
+}
+  
 }
 
 button,
