--- a/News_homepage/stylesheets/components/main-nav.css
+++ b/News_homepage/stylesheets/components/main-nav.css
@@ -1,15 +1,74 @@
-.header-logo  {
-    width: 50px;
+.logo {
+  width: 64px;
+  height: auto;
+}
 
+.navbar {
+  display: flex;
+  align-items: center;
+  margin-bottom: 36px;
+}
+
+
+
+
+
+
+
+
+
+.hamburger, .close {
+    display: none;
     
-}
-.burger-menu {
-    height: 20px;
-    width: 50px;
-}
-.main-nav {
-    margin-bottom: 26px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  }
+
+  @media only screen and (max-width: 992px) {
+    .menu-active {
+        display: block;
+        position: absolute;
+        right: 1rem;
+        cursor: pointer;
+        z-index: 100;       
+    }
+    .nav-list {
+        position: absolute;
+        top: 0;
+        left: 30%;
+        right: 0;
+        height: 100vh;
+        width: 70%;
+        background: #fff;
+        list-style-type: none;
+        display: block;
+        padding: 150px 15px;
+        transform: scaleY(0);
+      }
+      .active {
+        transform: scaleY(1);
+      }
+
+      .nav-list > li  {
+        margin-bottom: 32px;
+        font-size: 18px;
+        padding: 10px;
+    }
+  }
+
+
+@media only screen and (min-width: 992px) {
+   
+    .hamburger {
+        display: none;
+    }
+
+    .nav-list {
+       display: flex;
+       align-items: center;
+       justify-content: flex-end;
+      width: 1440px;
+    }
+
+    .nav-list > li:not(:last-child) {
+        margin-right: 26px;
+    }
 }
