--- a/News_homepage/stylesheets/global.css
+++ b/News_homepage/stylesheets/global.css
@@ -15,12 +15,17 @@
 }
 
 body {
-    padding: 24px 14px;
-    font-family:  var(--ff-primary)
+    padding: 32px 16px;
+    font-family:  var(--ff-primary);
+    max-width: 1440px;
+    margin: 0 auto;
+  }
 }
 
 p {
     color: var(--clr-grayish-dark-blue);
+    font-size: 15px;
+    line-height: 115%;
 }
 
 .attribution {
