--- a/News_homepage/stylesheets/components/interesting-links.css
+++ b/News_homepage/stylesheets/components/interesting-links.css
@@ -1,9 +1,11 @@
 .interesting-links-container {
   margin-bottom: 46px;
   display: flex;
+  
 }
 
 .interesting-link {
+  display: flex;
 
 
   align-items: center;
